--- a/web/components/toodles-item.html
+++ b/web/components/toodles-item.html
@@ -2,6 +2,7 @@
 <link rel="import" href="/components/toodles-complete.html">
 <link rel="import" href="/components/toodles-tags.html">
 <link rel="import" href="/components/toodles-remain.html">
+<link rel="import" href="/components/toodles-combo.html">
 
 <dom-module id="toodles-item">
   <template>
@@ -15,8 +16,31 @@
         margin: 16px 88px 0 16px;        
       }
 
+      input {
+        background: none;
+        border: none;
+        color: rgba( 0, 0, 0, 0.87 );   
+        flex-grow: 1;
+        font-size: 14px;  
+        line-height: 48px;
+        margin: 0;
+        outline: 0;
+        padding: 0;        
+      }
+
+      #duration {
+        border-left: solid 1px rgba( 0, 0, 0, 0.12 );
+      }
+
+      #energy {
+        border-left: solid 1px rgba( 0, 0, 0, 0.12 );
+      }
+
+      #location {
+        border-left: solid 1px rgba( 0, 0, 0, 0.12 );
+      }
+
       .details {
-        border-top: solid 1px rgba( 0, 0, 0, 0.12 );
         flex-direction: column;        
       }
 
@@ -43,6 +67,16 @@
         flex-direction: row;
         height: 48px;        
       }
+
+      .tags {
+        background-image: url( /img/offer.black.svg );
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 24px;
+        height: 48px;
+        opacity: 0.54;
+        width: 48px;        
+      }
     </style>
     <div class="summary">
       <toodles-complete></toodles-complete>
@@ -52,6 +86,30 @@
     </div>
     <div class="details">
       <div class="row">
+        <div class="tags"></div>
+        <toodles-tags></toodles-tags>
+        <input>
+      </div>
+      <div class="row">
+        <toodles-combo icon="/img/event.black.svg"></toodles-combo>
+        <toodles-combo 
+          id="location" 
+          icon="/img/location.black.svg">
+        </toodles-combo>
+        <toodles-combo 
+          id="duration" 
+          icon="/img/duration.black.svg"
+          items="Any,< 30 mins.,30 - 60 mins.,1 - 2 hrs.,> 4 hrs."
+          selected="4">    
+        </toodles-combo>
+        <toodles-combo 
+          id="energy" 
+          icon="/img/energy.black.svg" 
+          items="Any,Low,Normal,High"
+          selected="2">
+        </toodles-combo>        
+      </div>
+      <div class="row" style="height: 96px;">        
       </div>
     </div>
   </template>
