--- a/web/components/toodles-tags.html
+++ b/web/components/toodles-tags.html
@@ -1,4 +1,5 @@
 <link rel="import" href="/bower_components/polymer/polymer-element.html">
+<link rel="import" href="/components/toodles-chip.html">
 
 <dom-module id="toodles-tags">
   <template>
@@ -8,66 +9,8 @@
         flex-direction: row;
         height: 48px;
       }
-
-      .chip {
-        align-items: center;
-        background-color: rgba( 0, 0, 0, 0.12 );
-        border-radius: 32px;
-        color: rgba( 0, 0, 0, 0.87 ); 
-        cursor: default;
-        display: flex;
-        flex-direction: row;
-        font-size: 14px;
-        height: 32px;
-        line-height: 32px;
-        margin: 8px 16px 0 0;
-        padding: 0 4px 0 12px;        
-      }
-
-      .chip.hover {
-        background-color: rgba( 0, 0, 0, 0.54 );
-      }
-
-      button {
-        background: none;
-        background-image: url( /img/cancel.black.svg );
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 24px;
-        border: none;
-        border-radius: 24px;
-        height: 24px;
-        margin: 0 0 0 4px;
-        opacity: 0.54;
-        outline: none;
-        width: 24px;
-      }
-
-      button:hover {
-        background-image: url( /img/cancel.white.svg );
-        opacity: 1;
-      }
-
-      p {
-        color: rgba( 0, 0, 0, 0.87 );
-        font-size: 14px;
-        line-height: 32px;
-        margin: 0;
-        padding: 0;
-      }  
-
-      p.hover {
-        color: white;
-      }    
     </style>
-    <div class="chip">
-      <p>awesome</p>
-      <button on-mouseover="onOver" on-mouseout="onOut" on-click="onClick"></button>
-    </div>
-    <div class="chip">
-      <p>journey</p>
-      <button on-mouseover="onOver" on-mouseout="onOut" on-click="onClick"></button>
-    </div>
+    <slot></slot>
   </template>
   <script>
     class Tags extends Polymer.Element {  
@@ -79,7 +22,52 @@
 
       static get properties() {
         return {
-          tags: String
+          list: {
+            type: Array,
+            observer: 'onList',
+            value: []
+          }, 
+          editable: {
+            type: Boolean,
+            value: false
+          }
+        }
+      }
+
+      doRemove( evt ) {
+        for( let t = 0; t < this.list.length; t++ ) {
+          if( this.list[t] == evt.detail.label ) {
+            this.list.splice( t, 1 );
+            break;
+          }
+        }
+
+        evt.target.remove();
+
+        this.dispatchEvent( new CustomEvent( Tags.CHANGE, {
+          detail: {
+            tags: this.list
+          }
+        } ) );          
+      }
+
+      onList( value, old ) {
+        // Remove previous
+        while( this.children.length > 0 ) {
+          this.children[0].remove();
+        }
+
+        // Build list
+        for( let t = 0; t < this.list.length; t++ ) {
+          let chip = document.createElement( 'toodles-chip' );
+          chip.addEventListener( Chip.REMOVE, evt => this.doRemove( evt ) );
+
+          if( this.editable ) {
+            chip.setAttribute( 'editable', this.editable );
+          }
+
+          chip.label = this.list[t];
+          this.appendChild( chip );
         }
       }
 
@@ -89,26 +77,6 @@
 
       show() {
         this.style.display = 'flex';
-      }      
-
-      onClick( evt ) {
-        evt.target.parentElement.remove();
-
-        let tags = [];
-
-        for( let c = 0; c < this.children.length; c++ ) {
-          console.log( this.children[c] );
-        }
-      }
-
-      onOut( evt ) {
-        evt.target.parentElement.classList.remove( 'hover' );
-        evt.target.parentElement.children[0].classList.remove( 'hover' );
-      }
-
-      onOver( evt ) {
-        evt.target.parentElement.classList.add( 'hover' );
-        evt.target.parentElement.children[0].classList.add( 'hover' );
       }      
     }
 
