--- a/web/components/toodles-remain.html
+++ b/web/components/toodles-remain.html
@@ -4,11 +4,12 @@
   <template>
     <style>
       :host {
-        
+
       }
 
       p {
         border-left: solid 1px rgba( 0, 0, 0, 0.12 );
+        border-radius: 0 2px 2px 0;          
         color: rgba( 0, 0, 0, 0.87 ); 
         display: block;
         font-size: 14px;
@@ -19,8 +20,12 @@
         text-align: center;
         width: 110px;
       }      
+
+      p.shade {
+        background-color: #EF9A9A;
+      }
     </style>
-    <p>1 day left</p>
+    <p id="label"></p>
   </template>
   <script>
     class Remain extends Polymer.Element {  
@@ -32,7 +37,11 @@
 
       static get properties() {
         return {
-          due: Date
+          due: {
+            type: Number,
+            observer: 'onDate',
+            value: 0
+          }
         }
       }
 
@@ -43,6 +52,27 @@
       show() {
         this.style.display = 'flex';
       }      
+
+      onDate( value, old ) {
+        let end = new Date( this.due );
+        let now = new Date();
+        let difference = moment( end ).diff( now, 'days' );
+        let display = difference + ' days left';
+
+        this.$.label.classList.remove( 'shade' );
+
+        if( difference == 0 ) {
+          display = 'due today';
+          this.$.label.classList.add( 'shade' );
+        } else if( difference == 1 ) {
+          display = difference + ' day left';
+        } else if( difference < 0 ) {
+          display = Math.abs( difference ) + ' days ago';
+          this.$.label.classList.add( 'shade' );
+        }
+
+        this.$.label.innerHTML = display;
+      }
     }
 
     customElements.define( Remain.is, Remain );    
